# vivian-rs

./: .gitignore  Cargo.toml  LICENSE-Apache-2.0  LICENSE-MIT  README.md  flake.nix
.github/workflows/: publish.yml  test.yml
.github/wrokflows/: publish.yml
.idx/: dev.nix
crates/milky-mock-server/: Cargo.toml
crates/milky-mock-server/src/: main.rs  state.rs
crates/milky-mock-server/src/handlers/: api.rs  ws.rs
crates/milky-rust-sdk/: Cargo.toml  README.md
crates/milky-rust-sdk/examples/: basic_usage.rs
crates/milky-rust-sdk/src/: api.rs  client.rs  lib.rs  logger.rs  types.rs  utils.rs
crates/milky-rust-sdk/src/api/: file.rs  friend.rs  group.rs  message.rs  system.rs
crates/milky-rust-sdk/src/types/: common.rs  communication.rs  message.rs
crates/milky-types/: Cargo.toml  README.md
crates/milky-types/src/: lib.rs
crates/milky-types/src/types/: common.rs  event.rs  friend.rs  group.rs  message.rs  mod.rs
crates/milky-types/src/types/message/: in_coming.rs  out_going.rs
crates/mock-server/: Cargo.toml
crates/sdk/: .gitignore  Cargo.toml
crates/sdk/examples/: basic_usage.rs
crates/sdk/src/: lib.rs  types.rs
crates/sdk/src/api/: group.rs  request.rs
crates/sdk/src/types/: common.rs  friend.rs
crates/sdk/src/types/message/: in_coming.rs
examples/: basic_usage.rs
src/: api.rs  client.rs  error.rs  lib.rs  logger.rs
src/api/: file.rs  friend.rs  group.rs  message.rs  request.rs  system.rs
src/types/: common.rs  communication.rs  event.rs  friend.rs  group.rs  message.rs
src/types/message/: in_coming.rs  out_going.rs
