[package]
name = "vivian"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
url = "2"
log = "0.4"
thiserror = "1"
uuid = { version = "1.16.0", features = ["v4"] }
reqwest = { version = "0.12.15", features = ["json"] }
pretty_env_logger = "0.5.0"
env_logger = "0.11.8"
chrono = "0.4.41"
ansi_term = "0.12.1"
