[package]
name = "vivian"
version = "0.2.0"
edition = "2024"
authors = ["hanasaki <hanasakayui2022@gmail.com>"]
description = "Rust implementation (Vivian) of the Milky protocol"
keywords = ["chatbot", "sdk", "async"]
categories = [
  "api-bindings",
  "asynchronous",
  "network-programming",
  "web-programming::websocket",
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/hanasa2023/vivian-rs"
repository = "https://github.com/hanasa2023/vivian-rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
url = "2"
log = "0.4"
thiserror = "2"
uuid = { version = "1.16.0", features = ["v4"] }
reqwest = { version = "0.12.15", features = ["json"] }
pretty_env_logger = "0.5.0"
env_logger = "0.11.8"
chrono = "0.4.41"
ansi_term = "0.12.1"
axum = "0.8.4"
