[package]
name = "milky-mock-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
better-panic = "0.3.0"
cfg-if = "1.0.4"
color-eyre = "0.6.5"
eyre = "0.6.12"
futures-util = "0.3.31"
ratatui = "0.29.0"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full", "macros", "rt-multi-thread"] }
