[package]
name = "milky-rust-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust implementation of the Milky protocol"
keywords = ["chatbot", "sdk", "async"]
categories = [
  "api-bindings",
  "asynchronous",
  "network-programming",
  "web-programming::websocket",
]
license.workspace = true
homepage.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
milky-types = { path = "../milky-types" }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
url = "2"
log = "0.4"
thiserror = "2"
uuid = { version = "1.16.0", features = ["v4"] }
reqwest = { version = "0.12.15", features = ["json"] }
pretty_env_logger = "0.5.0"
env_logger = "0.11.8"
chrono = "0.4.41"
ansi_term = "0.12.1"
axum = "0.8.4"
tokio = { workspace = true }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
