[package]
name = "milky-types"
authors.workspace = true
version.workspace = true
edition.workspace = true
description = "Rust implementation of the Milky protocol"
keywords = ["chatbot", "sdk", "types", "milky"]
categories = ["api-bindings", "data-structures", "encoding"]
homepage.workspace = true
license.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_test = "1"
